Update calendar icon styling

--- a/src/components/tournaments/calendar_icon.scss
+++ b/src/components/tournaments/calendar_icon.scss
@@ -8,6 +8,8 @@
   background: #B71C1C;
   padding: 0.3rem 0 0.1rem;
   color: #ffffff !important;
+  font-size: 0.75rem !important;
+  font-weight: bold !important;
   box-shadow: inset 0 -1px 0 0 #666;
 }
 
