Add details button to tournament card

--- a/src/components/tournaments/tournament_card.scss
+++ b/src/components/tournaments/tournament_card.scss
@@ -1,3 +1,11 @@
 .tournament-card {
   display: flex;
 }
+
+.tournament-card-content {
+  flex: 1;
+}
+
+.action-details {
+  margin-left: auto !important;
+}
