--- a/src/components/alert.scss
+++ b/src/components/alert.scss
@@ -10,6 +10,6 @@
 
 .alert-error {
   @extend %alert;
-  background-color: #FF8A80 !important;
-  color: #B71C1C !important;
+  background-color: #D32F2F !important;
+  color: #FFFFFF !important;
 }
