--- a/src/components/rounds/round.scss
+++ b/src/components/rounds/round.scss
@@ -3,10 +3,11 @@
 }
 
 .side {
-  padding: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .main {
   flex: 1;
-  padding: 20px;
+  padding-bottom: 20px;
 }
