Refactor rounds list

--- a/src/components/rounds/round.scss
+++ b/src/components/rounds/round.scss
@@ -1,14 +1,3 @@
-.container {
-  display: flex;
-}
-
-.side {
-  padding-right: 30px;
-  padding-bottom: 20px;
-  padding-top: 10px;
-}
-
-.main {
-  flex: 1;
-  padding-bottom: 40px;
+.top {
+  padding-bottom: 30px;
 }
