--- a/src/components/results/results_list.scss
+++ b/src/components/results/results_list.scss
@@ -1,3 +1,9 @@
+.container {
+  @media screen and (min-width: 960px) {
+    padding-left: 68px;
+  }
+}
+
 .top-1 {
   background-color: #FFECB3 !important;
 }
