--- a/src/components/rounds/rounds_list.scss
+++ b/src/components/rounds/rounds_list.scss
@@ -1,9 +1,13 @@
-.wrap {
-  position: relative;
+.container {
+  display: flex;
 }
 
-.container {
-  position: absolute;
+.side {
+  padding-right: 20px;
+}
+
+.main {
+  flex: 1;
 }
 
 .navigation {
