--- a/src/pages/tournaments/tournament_page.scss
+++ b/src/pages/tournaments/tournament_page.scss
@@ -1,3 +1,9 @@
+.tabs {
+  @media screen and (min-width: 960px) {
+    padding-left: 68px;
+  }
+}
+
 .contents {
   padding-left: 10px;
   padding-top: 20px;
