Use classnames package for conditional classes

--- a/src/components/results/results_list.scss
+++ b/src/components/results/results_list.scss
@@ -4,14 +4,14 @@
   }
 }
 
-.top-1 {
+.gold {
   background-color: #FFECB3 !important;
 }
 
-.top-2 {
+.silver {
   background-color: #F5F5F5 !important;
 }
 
-.top-3 {
+.bronze {
   background-color: #D7CCC8 !important;
 }
